2008-12-09  Vincent Untz  <vuntz@gnome.org>

	* fish.c: add missing include for glib/gi18n.h

==================== 2.24.2 ====================

==================== 2.24.1 ====================

==================== 2.24.0 ====================

==================== 2.23.92 ====================

==================== 2.23.91 ====================

==================== 2.23.90.1 ====================

==================== 2.23.90 ====================

==================== 2.23.6 ====================

==================== 2.23.5 ====================

==================== 2.23.4 ====================

==================== 2.23.3 ====================

==================== 2.23.2.1 ====================

==================== 2.23.2 ====================

==================== 2.23.1 ====================

==================== 2.22.1.3 ====================

==================== 2.22.1.2 ====================

==================== 2.22.1.1 ====================

==================== 2.22.1 ====================

==================== 2.22.0 ====================

==================== 2.21.92 ====================

==================== 2.21.91 ====================

==================== 2.21.90 ====================

==================== 2.21.5 ====================

==================== 2.20.1 ====================

==================== 2.20.0.1 ====================

==================== 2.20.0 ====================

==================== 2.19.92 ====================

==================== 2.19.6 ====================

2007-07-26  Jaap Haitsma  <jaap@haitsma.org>

	* GNOME_FishApplet.xml:
	Use gtk-about icon i.s.o. deprectated gnome-stock-about
	Fixes bug #457148

==================== 2.19.5 ====================

2007-07-07  Vincent Untz  <vuntz@gnome.org>

	* fish.c: (display_about_dialog): use program-name instead of name
	property for GtkAboutDialog.
	Fix bug #438903.

2007-07-01  Vincent Untz  <vuntz@gnome.org>

	* fish.c: (set_tooltip): use gtk_widget_set_tooltip_markup()
